--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,11 +67,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
-//    def work_version = "2.5.0"
-//    // (Java only)
-//    implementation "androidx.work:work-runtime:$work_version"
-//
-//    // Kotlin + coroutines
-//    implementation "androidx.work:work-runtime-ktx:$work_version"
+    //lottie
+    implementation "com.airbnb.android:lottie:3.4.4"
+
+
 
 }
